--- a/js/public/index.html
+++ b/js/public/index.html
@@ -11,6 +11,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./birdCard.css" />
+    <link rel="stylesheet" href="./modal.css" />
   </head>
   <body>
     <h1>Albuaves Birds</h1>
